fixes popup's close button and adds overflow for him

--- a/css/style.css
+++ b/css/style.css
@@ -1707,9 +1707,10 @@ label {
 .faq-detailed-wrapper__text,
 .faq-detailed-wrapper__video {
     position: fixed;
+    overflow: auto;
     width: 100%;
     height: 100%;
-    scrooll top: 0;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -1791,6 +1792,49 @@ label {
     background-image: url('../img/close-button.svg');
 }
 
+/* положение кнопки "закрыть" на меньших разрешениях экрана */
+
+@media (max-width: 1180px) {
+    .close-button {
+        width: 30px;
+        height: 30px;
+        left: 95%;
+    }
+}
+
+@media (max-width: 860px) {
+    .close-button {
+        width: 28px;
+        height: 28px;
+        left: 94%;
+    }
+}
+
+
+@media (max-width: 680px) {
+    .close-button {
+        width: 26px;
+        height: 26px;
+        left: 93%;
+    }
+}
+
+@media (max-width: 540px) {
+    .close-button {
+        width: 24px;
+        height: 24px;
+        left: 91%;
+    }
+}
+
+
+@media (max-width: 390px) {
+    .close-button {
+        width: 22px;
+        height: 22px;
+        left: 88%;
+    }
+}
 
 /* карточки с ответами 1160px */
 
